--- a/8.10-EtiquetaVideo.html
+++ b/8.10-EtiquetaVideo.html
@@ -17,6 +17,6 @@
     <video src="Assets/video/Rap de Xbuyer (1).mp4" controls autoplay></video>
     <h2>Atribut Muted</h2>
     <video src="Assets/video/Rap de Xbuyer (1).mp4" controls muted></video>
-
+    <a href="../HTML1/index.html" target="_blank">Anar a index</a>
 </body>
 </html>
