--- a/8.12-EtiquetaFigure.html
+++ b/8.12-EtiquetaFigure.html
@@ -23,5 +23,6 @@
         <figcaption>Figura de un gosset</figcaption>
         <img src="Assets/images/dog.jpg" alt="dogi">
     </figure>
+    <a href="../HTML1/index.html" target="_blank">Anar a index</a>
 </body>
 </html>
